# afs

./: CLAUDE.md  Cargo.toml  Dockerfile.test  README.md
.github/workflows/: ci.yml
afs-cli/: Cargo.toml
afs-cli/src/: main.rs
afs-cli/src/commands/: dir.rs  fs.rs  mod.rs
afs-common/: Cargo.toml
afs-common/src/: error.rs
afs-controller/: Cargo.toml
afs-controller/src/: config.rs  db.rs  lib.rs  main.rs  service.rs
afs-controller/tests/: integration_test.rs
afs-fuse/: Cargo.toml  build.rs
afs-fuse/src/: config.rs  filesystem.rs  lib.rs  main.rs  service.rs
afs-storage/: Cargo.toml
afs-storage/src/: lib.rs  local.rs  nfs.rs
docs/: architecture.md  cli.md
docs/plans/: 2026-03-31-ctxfs-design.md
proto/: afs.proto
tests/: e2e-lib.sh  e2e-nfs.sh  e2e.sh  setup-nfs.sh
