[package]
name = "afs-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
afs-common = { path = "../afs-common" }
anyhow = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]

[build-dependencies]
tonic-build = { workspace = true }
