[package]
name = "afs-fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
afs-common = { path = "../afs-common" }
afs-storage = { path = "../afs-storage" }
anyhow = { workspace = true }
fuser = { workspace = true }
libc = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
